deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parakram
  labels:
    app: parakram
    tier: production
